<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- I'm using linear layout because all elements are aligned in same direction 'vertical' -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/half_margin">

        <TextView
            android:id="@+id/itemShoeName"
            style="@style/text_item_title"
            tools:text="@string/shoe_name" />

        <TextView
            android:id="@+id/itemCompany"
            style="@style/text_item_sub"
            tools:text="@string/company" />

        <TextView
            android:id="@+id/itemSize"
            style="@style/text_item_sub"
            tools:text="@string/size" />

        <TextView
            android:id="@+id/itemDescription"
            style="@style/text_item_sub_des"
            tools:text="@string/description" />

        <View
            android:id="@+id/view_shoe_item"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/half_margin"
            android:background="@color/primaryColor" />

    </LinearLayout>
</layout>
