<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.astroanastariq.shoestore.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/main_nav_graph" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.astroanastariq.shoestore.welcome.WelcomeFragment"
        android:label="@string/welcome_fragment_label"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/main_nav_graph" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.astroanastariq.shoestore.instructions.InstructionsFragment"
        android:label="@string/instructions_fragment_label"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/main_nav_graph" />
    </fragment>
    <fragment
        android:id="@+id/listingFragment"
        android:name="com.astroanastariq.shoestore.listing.ListingFragment"
        android:label="@string/shoes_list_fragment_label"
        tools:layout="@layout/fragment_listing">
        <action
            android:id="@+id/action_listingFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/listingFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_listingFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/main_nav_graph" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.astroanastariq.shoestore.details.DetailsFragment"
        android:label="@string/show_details_fragment_label"
        tools:layout="@layout/fragment_details" />
</navigation>