<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize">

        <!-- I'm using constraint layout here to adapt the views in screen rotating or in big screen devices
         In first I was using Lineal Layout because it's more efficient here and this layout
         we have views arranged vertically.-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".instructions.InstructionsFragment">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/instructionPic"
                android:layout_width="260dp"
                android:layout_height="200dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/instructionicon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/inst_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/amiri"
                android:text="@string/howtouse"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:textColor="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructionPic"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/inst_sub1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/instruction1"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inst_title" />


            <TextView
                android:id="@+id/inst_sub2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/instruction2"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inst_sub1" />

            <TextView
                android:id="@+id/inst_sub3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/instruction3"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inst_sub2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonShoesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/full_margin"
                android:layout_marginTop="@dimen/full_margin"
                android:layout_marginEnd="@dimen/full_margin"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/get_started"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/rounded_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inst_sub3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>