<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- I'm using constraint layout here to adapt the views in screen rotating or in big screen devices
        In first I was using Lineal Layout because it's more efficient here and this layout
        we have views arranged vertically.-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".welcome.WelcomeFragment">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/welcomePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/amiri"
                android:gravity="center"
                android:text="@string/chooseyourfav"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:textColor="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomePic"
                app:layout_constraintVertical_bias="0.13999999" />

            <TextView
                android:id="@+id/welcome_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth_bold"
                android:gravity="center"
                android:text="@string/pairofshoes"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/next"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/rounded_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_sub"
                app:layout_constraintVertical_bias="0.17000002" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>